--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -26,7 +26,7 @@
             <div class="card">
                 <img src="https://placekitten.com/301/200" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <p class="card-text">Cute kitten 2</p>
+                    <p class="card-text">Cute kitten two</p>
                 </div>
             </div>
         </div>
