--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://placekitten.com/301/200" class="card-img-top" alt="...">
+                <img src="https://static.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">Cute kitten two</p>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="https://placekitten.com/302/200" class="card-img-top" alt="...">
+                <img src="https://cdn.pixabay.com/photo/2017/05/29/15/34/kitten-2354016_1280.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text">Cute kitten 3</p>
                 </div>
